Fixed the navbar padding, and added the routes
Finally i added the routes, and i fixed some codes i messed up. I dont know how to integrate the routes to navbar, but not now.

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,3 @@
 .container-fluid {
-  background-color: rgb(238, 210, 132);
-}
-.navbar {
-  padding: 0px;
+  background-color: rgb(218, 199, 149);
 }
